# nte-piano-player

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  nte_autoplayer.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: tests.yml
scores/: .gitignore  README.md  twinkle-twinkle.musicxml
scripts/: play.ps1
tests/: test_nte_autoplayer.py
